--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@ output
 .vscode
 .venv
 __pycache__
-mouse_movement_exp
+input
 debug.py
 password.txt
 *.sqlite
 user.json
 output
+TCB2_DLC_analysis_org[1].zip
+testdf_summary_sns
+test
