--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@
 # Use command "pip install -r requirements.txt" to install
 
 pandas==2.0.3
-matplotlib
+matplotlib==3.7.3
 outlier_utils
 pingouin
 scipy
 git+https://github.com/remicorne/statannotations
 statsmodels
+openpyxl
 networkx
 
