--- a/requirements_old.txt
+++ b/requirements_old.txt
@@ -1,9 +1,19 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
+allensdk==2.16.2
 appnope==0.1.3
+argschema==3.0.4
 astroid==3.0.0
 asttokens==2.2.1
+async-timeout==4.0.3
+attrs==23.1.0
 backcall==0.2.0
+blosc2==2.3.2
+boto3==1.34.7
+botocore==1.34.7
 brokenaxes==0.5.0
 Brotli==1.0.9
+cachetools==5.3.2
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -14,34 +24,56 @@ Cython==0.29.34
 debugpy==1.6.7
 decorator==5.1.1
 dill==0.3.7
+distro==1.9.0
 et-xmlfile==1.1.0
 executing==1.2.0
 fonttools==4.39.3
+frozenlist==1.4.1
+future==0.18.3
+Glymur==0.12.9.post1
+greenlet==3.0.3
+h5py==3.10.0
+hdmf==3.11.0
 html5lib==1.1
 idna==3.4
 igor==0.3
+imageio==2.33.1
 importlib-metadata==6.3.0
 ipykernel==6.22.0
 ipython==8.12.0
 isort==5.12.0
 jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.2.0
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 kiwisolver==1.3.1
-lazy_loader==0.2
+lazy_loader==0.3
 littleutils==0.2.2
+lxml==4.9.4
+MarkupSafe==2.1.3
+marshmallow==3.20.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
+msgpack==1.0.7
+multidict==6.0.4
+ndindex==1.7
+ndx-events==0.2.0
 nest-asyncio==1.5.6
+networkx==3.2.1
 nose==1.3.7
-numpy==1.24.2
+nptyping==2.5.0
+numexpr==2.8.8
+numpy==1.23.5
 openpyxl==3.1.2
 outdated==0.2.2
 outlier-utils==0.0.3
 packaging==23.1
-pandas==1.5.2
+pandas==1.5.3
 pandas-flavor==0.5.0
 parso==0.8.3
 patsy==0.5.3
@@ -49,35 +81,56 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
 pingouin==0.5.3
+pip-autoremove==0.10.0
 platformdirs==3.2.0
 prompt-toolkit==3.0.38
 psutil==5.9.4
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py-cpuinfo==9.0.0
 pycparser==2.21
 pydyf==0.6.0
 Pygments==2.15.0
 pylint==3.0.0
+pynrrd==1.0.0
+pynwb==2.5.0
 pyparsing==2.4.7
 pyphen==0.14.0
 python-dateutil==2.8.2
 pytz==2021.1
+PyYAML==6.0.1
 pyzmq==25.0.2
+referencing==0.32.0
 requests==2.28.2
+requests-toolbelt==1.0.0
+rpds-py==0.15.2
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
+s3transfer==0.10.0
+scikit-build==0.17.6
+scikit-image==0.22.0
 scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.11.2
+semver==3.0.2
+SimpleITK==2.3.1
+simplejson==3.19.2
 six==1.16.0
+SQLAlchemy==2.0.23
 stack-data==0.6.2
 statannot==0.2.3
 statannotations==0.6.0
 statsmodels==0.13.5
+tables==3.9.2
 tabulate==0.9.0
 threadpoolctl==3.1.0
+tifffile==2023.12.9
 tinycss2==1.2.1
 tomli==2.0.1
 tomlkit==0.12.1
 tornado==6.2
+tqdm==4.66.1
 traitlets==5.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
@@ -85,6 +138,7 @@ urllib3==1.26.15
 wcwidth==0.2.6
 weasyprint==58.1
 webencodings==0.5.1
-xarray==2023.9.0
+xarray==2023.1.0
+yarl==1.9.4
 zipp==3.15.0
 zopfli==0.2.2
