and the dict trees under allen

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ input
 debug.py
 debug2.py
 .DS_Store
-allen_sdk
 
+
+allen_sdk
+mouse_connectivity/manifest.json
+mouse_connectivity/structures.json
