--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,7 +67,7 @@ jobs:
           path: coverage.xml       # Path to coverage report
           format: cobertura        # Format of the coverage report
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # GitHub token for authentication
 
   codeql-analysis:
     name: CodeQL Analysis
