--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,9 +48,10 @@ jobs:
       # Step 6: Run tests with coverage
       - name: Run Tests with Coverage
         run: |
-          coverage run -m xmlrunner discover -s tests -p 'test_*.py' -o test-reports
-          coverage xml -o coverage.xml
-          coverage report
+          coverage run -m unittest discover -s tests -p 'test_*.py'  # Run tests
+          coverage xml -o coverage.xml  # Generate coverage report in XML format
+          coverage report               # Display coverage report
+
 
       - name: Publish Test Results
         if: success() || failure()
